--- a/ModelTraining/CNN.ipynb
+++ b/ModelTraining/CNN.ipynb
@@ -189,6 +189,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training Set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -199,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -253,39 +260,8 @@
        "      <td>Img/img026-037.png</td>\n",
        "      <td>P</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1095</th>\n",
-       "      <td>Img/img020-051.png</td>\n",
-       "      <td>J</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1130</th>\n",
-       "      <td>Img/img021-031.png</td>\n",
-       "      <td>K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1294</th>\n",
-       "      <td>Img/img024-030.png</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>860</th>\n",
-       "      <td>Img/img016-036.png</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3174</th>\n",
-       "      <td>Img/img058-040.png</td>\n",
-       "      <td>v</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3069 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -294,25 +270,17 @@
        "1187  Img/img022-033.png     L\n",
        "501   Img/img010-007.png     9\n",
        "3297  Img/img060-053.png     x\n",
-       "1411  Img/img026-037.png     P\n",
-       "...                  ...   ...\n",
-       "1095  Img/img020-051.png     J\n",
-       "1130  Img/img021-031.png     K\n",
-       "1294  Img/img024-030.png     N\n",
-       "860   Img/img016-036.png     F\n",
-       "3174  Img/img058-040.png     v\n",
-       "\n",
-       "[3069 rows x 2 columns]"
+       "1411  Img/img026-037.png     P"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_set = pd.DataFrame({'image':X_train,'label':y_train})\n",
-    "train_set"
+    "train_set.head()"
    ]
   },
   {
@@ -335,13 +303,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing Set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3135</th>\n",
+       "      <td>Img/img058-001.png</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1789</th>\n",
+       "      <td>Img/img033-030.png</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>Img/img004-006.png</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680</th>\n",
+       "      <td>Img/img013-021.png</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2803</th>\n",
+       "      <td>Img/img051-054.png</td>\n",
+       "      <td>o</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   image label\n",
+       "3135  Img/img058-001.png     v\n",
+       "1789  Img/img033-030.png     W\n",
+       "170   Img/img004-006.png     3\n",
+       "680   Img/img013-021.png     C\n",
+       "2803  Img/img051-054.png     o"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_set = pd.DataFrame({'image':X_train,'label':y_train})\n",
-    "test_set"
+    "test_set = pd.DataFrame({'image':X_test,'label':y_test})\n",
+    "test_set.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 341 validated image filenames belonging to 62 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "testing_data_frame = train_data_generator.flow_from_dataframe(dataframe=test_set, directory=\"archive\", x_col='image', \n",
+    "                                                               y_col='label', target_size=(64, 64), \n",
+    "                                                               class_mode='categorical')"
    ]
   },
   {
