--- a/ModelTraining/CNN_test2.ipynb
+++ b/ModelTraining/CNN_test2.ipynb
@@ -382,8 +382,8 @@
    ],
    "source": [
     "# save model\n",
-    "model.save('../CNN_ver1.h5')\n",
-    "print(\"======model saved======\")"
+    "# model.save('../CNN_ver1.h5')\n",
+    "# print(\"======model saved======\")"
    ]
   },
   {
